after editing the YML file.

--- a/mi_card_flutter/pubspec.yaml
+++ b/mi_card_flutter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mi_card
-description: A new Flutter application.
+description: A new Flutter application which I attemp to learn something new.
 version: 1.0.0+1
 
 environment:
